force-app/main/default/objects/sfLma__License__c/fields/sfLma__Account__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field displays the Account associated with the license after the partner converts the Lead to an account as part of Lead Conversion process</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N30000001JvRMEA0</relationshipName>
    <type>Lookup</type>
</CustomField>