force-app/main/default/objects/sfLma__License__c/fields/sfLma__Contact__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field displays the Contact associated with the license after the partner converts the Lead to a contact as part of Lead Conversion process</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N30000001JvR6EAK</relationshipName>
    <type>Lookup</type>
</CustomField>