force-app/main/default/objects/sfLma__License__c/fields/sfLma__Install_Date__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Install_Date__c</fullName>
    <description>The Date this Package Version was initially installed by the developer. (Does not get updated as part of upgrades.)</description>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>