force-app/main/default/objects/sfLma__License__c/fields/sfLma__Is_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Is_Sandbox__c</fullName>
    <description>This read-only field indicates if the subscriber org is a sandbox</description>
    <formula>sfLma__Subscriber_Org_Is_Sandbox__c</formula>
    <label>Sandbox</label>
    <type>Checkbox</type>
</CustomField>