force-app/main/default/objects/sfLma__License__c/fields/sfLma__Package__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package</label>
    <referenceTo>sfLma__Package__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>