force-app/main/default/objects/sfLma__License__c/fields/sfLma__Package_Version__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Package_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package Version</label>
    <referenceTo>sfLma__Package_Version__c</referenceTo>
    <relationshipName>R00N30000001JvQxEAK</relationshipName>
    <type>Lookup</type>
</CustomField>