force-app/main/default/objects/sfLma__License__c/fields/sfLma__Proxy_User__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Proxy_User__c</fullName>
    <description>Proxy user in subscriber org</description>
    <label>Proxy User</label>
    <length>251</length>
    <type>Text</type>
</CustomField>