force-app/main/default/objects/sfLma__License__c/fields/sfLma__Status__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Status__c</fullName>
    <description>This is the Status of the Package License in the Subscriber Org</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Uninstalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>