force-app/main/default/objects/sfLma__License__c/fields/sfLma__Trial_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Trial_Expiration_Date__c</fullName>
    <description>The date on which this org&apos;s trial expires, if applicable.</description>
    <formula>sfLma__Org_Trial_Expiration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the subscriber organization is a trial, the date it expires.</inlineHelpText>
    <label>Org Expiration Date</label>
    <type>Text</type>
</CustomField>