force-app/main/default/objects/sfLma__License__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <columns>NAME</columns>
    <columns>sfLma__Lead__c</columns>
    <columns>sfLma__Package_Version__c</columns>
    <columns>sfLma__Licensed_Seats__c</columns>
    <columns>sfLma__Install_Date__c</columns>
    <columns>sfLma__Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sfLma__Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active</label>
</ListView>