force-app/main/default/objects/sfLma__License__c/listViews/Active_Trial.listView-meta.xml
<ListView>
    <fullName>Active_Trial</fullName>
    <columns>NAME</columns>
    <columns>sfLma__Lead__c</columns>
    <columns>sfLma__Package_Version__c</columns>
    <columns>sfLma__Licensed_Seats__c</columns>
    <columns>sfLma__Install_Date__c</columns>
    <columns>sfLma__Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sfLma__Expiration_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>sfLma__Expiration_Date__c</field>
        <operation>notEqual</operation>
        <value>Does not expire</value>
    </filters>
    <filters>
        <field>sfLma__License_Status__c</field>
        <operation>equals</operation>
        <value>Trial</value>
    </filters>
    <label>Active Trial</label>
</ListView>