force-app/main/default/objects/sfLma__License__c/listViews/sfLma__All.listView-meta.xml
<ListView>
    <fullName>sfLma__All</fullName>
    <columns>NAME</columns>
    <columns>sfLma__Lead__c</columns>
    <columns>sfLma__Package_Version__c</columns>
    <columns>sfLma__Licensed_Seats__c</columns>
    <columns>sfLma__License_Status__c</columns>
    <columns>sfLma__Is_Sandbox__c</columns>
    <columns>sfLma__Install_Date__c</columns>
    <columns>sfLma__Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>